# voice-memory-bench

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  TODO.md  go.mod  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nightly.yml
cmd/vbench/: datasets.go  eval.go  main.go  providers.go
datasets/custom/: README.md
docs/: architecture.md  benchmarks.md  contributing.md  faq.md  providers.md  voice-bench.md
examples/configs/: graphiti-locomo-temporal.yaml  mem0-locomo.yaml  memori-longmemeval.yaml
internal/adapter/: errors.go  http_client.go  types.go
internal/concurrency/: runner.go  runner_test.go
internal/dataset/: loader.go  locomo.go  types.go
internal/engine/: pipeline.go  stage_answer.go  stage_evaluate.go  stage_index.go  stage_ingest.go  stage_search.go
internal/llm/: openai.go
internal/report/: json.go  verdict.go  verdict_test.go
internal/schema/: artifacts.go  benchmark.go  config.go  config_test.go  memscore.go
internal/sidecar/: lifecycle.go  mem0.go
providers/cognee/: README.md  config.example.yaml  docker-compose.yml
providers/graphiti/: README.md  config.example.yaml  docker-compose.yml
providers/mem0/: README.md  config.example.yaml  docker-compose.yml
providers/memori/: README.md  config.example.yaml  docker-compose.yml
sidecars/mem0/: README.md  pyproject.toml
sidecars/mem0/vbench_mem0/: __init__.py  adapter.py  app.py  main.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_adapter_protocol.py  test_config.py  test_schemas.py
voice/: README.md  ROADMAP.md  __init__.py  docker-compose.yml
voice/pipeline/: __init__.py  isolation.py  latency.py  replay.py
voice/stt/: deepgram.py
voice/tts/: cartesia.py
voice/workers/: __init__.py  livekit_worker.py
voice_memory_bench/: __init__.py
voice_memory_bench/cli/: __init__.py  compare.py  datasets.py  main.py  providers.py  run.py
voice_memory_bench/core/: __init__.py  adapter.py  config.py  pipeline.py  schemas.py
voice_memory_bench/datasets/: __init__.py  base.py  custom.py  locomo.py  longmemeval.py
voice_memory_bench/providers/: __init__.py
voice_memory_bench/reporters/: __init__.py  json_reporter.py  markdown_reporter.py
(+8 files in other folders)
