[project]
name = "vbench-mem0"
version = "0.1.0"
description = "Mem0 sidecar for vbench: HTTP-speaking adapter over the Mem0 OSS Python SDK."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mahimai Raja" }]
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "mem0ai>=0.1.40",
]

[project.scripts]
vbench-mem0 = "vbench_mem0.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vbench_mem0"]

[tool.ruff]
line-length = 100
target-version = "py311"
